--- a/hot_dogz/templates/edit_profile.html
+++ b/hot_dogz/templates/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container flex flex-col items-center mx-auto bg-fixed bg-bottom bg-no-repeat bg-contain min-h-screen-less-nav md:min-h-screen-less-nav bg-dog6">
+<div class="container flex flex-col items-center mx-auto bg-fixed bg-bottom bg-no-repeat bg-contain min-h-screen-less-nav md:min-h-screen-less-nav bg-dog6 lg:bg-50%">
     <h1 class="py-4 title text-secondary-500 ">Edit Profile</h1>
     <form action="" method="POST" class="flex flex-col p-4 bg-white border border-gray-100 rounded-lg shadow-md w-80" novalidate>
             {{ form.hidden_tag()}}
