--- a/hot_dogz/templates/delete_account.html
+++ b/hot_dogz/templates/delete_account.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 <!--  Confirm Page for deleting a user's account -->
 {% block content %}
-    <div class="bg-bottom bg-no-repeat bg-contain min-h-screen-less-nav bg-dog7">
+    <div class="bg-bottom bg-no-repeat bg-contain min-h-screen-less-nav bg-dog7 lg:bg-50% lg:bg-right-bottom">
         <div class="flex flex-col gap-3 py-4 text-center">
             <h2 class="text-3xl">Are you <strong>sure</strong> you want to delete your account?</h2>
             <h3 class="text-2xl">This can't be undone!</h3>
