--- a/hot_dogz/templates/index.html
+++ b/hot_dogz/templates/index.html
@@ -11,7 +11,7 @@
         </div>
         <img src="https://res.cloudinary.com/cjcon90/image/upload/w_700,c_scale,q_auto,f_jpg/v1615248344/hot_dogz/wallpapers/dog4_crop.jpg"
                 alt="Photo of a fashionable dog holding a cell phone"
-                class="z-0 flex-1 object-cover landscape:w-6/12 landscape:self-end animate-appear">
+                class="z-0 flex-1 object-cover landscape:w-6/12 landscape:self-end">
 </div>
 
 
