--- a/hot_dogz/templates/base.html
+++ b/hot_dogz/templates/base.html
@@ -46,7 +46,7 @@
     </header>
     <!-- (bottom margin to offset fixed bottom navigation bar
           unless it is A. welcome screen or B. user is anonymous) -->
-    <main class="{{'mb-14 min-h-screen-less-both-nav' if title and current_user.is_authenticated}} md:min-h-screen-less-nav md:mb-0 mx-auto">
+    <main class="{{'min-h-screen-less-both-nav' if title and current_user.is_authenticated}} md:min-h-screen-less-nav md:mb-0 mx-auto">
       <!-- FLASH MESSAGES -->
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -99,6 +99,14 @@
         </nav>
       </div>
     {% endif %}
+    <footer class="flex flex-col h-20 py-2 pb-4 {{'mb-16' if title and current_user.is_authenticated}} text-center text-gray-300 bg-gray-700 md:m-0">
+      <p>Created by <a href="https://www.cjcon90.dev" class="font-semibold hover:text-white focus:underline">Ciaran Concannon</a></p>
+      <p>Pug photos coutesy of <a href="https://burst.shopify.com/@matthew_henry" class="font-semibold hover:text-white focus:underline">Matthew Henry</a></p>
+      <p><a href="https://www.flaticon.com/free-icon/pawprint_1076928?term=dog%20paw&page=1&position=2&page=1&position=2&related_id=1076928&origin=search"
+        class="font-semibold hover:text-white focus:underline">Hot Dogz Logo</a> and 
+        <a href="https://www.freepik.com/free-vector/different-dog-faces-collection_905468.htm"
+        class="font-semibold hover:text-white focus:underline">user avatars</a> courtesy of Freepik</p>
+    </footer>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </body>
 </html>
