add titles to error pages

--- a/hot_dogz/templates/errors/404.html
+++ b/hot_dogz/templates/errors/404.html
@@ -8,6 +8,6 @@
             <button class="w-40 btn btn-secondary focus:outline-none" onclick="history.back(-1)">Go Back</button>
         </div>
         <img src="https://res.cloudinary.com/cjcon90/image/upload/w_700,c_scale,q_auto,f_jpg/v1614203125/hot_dogz/wallpapers/dog1_crop.jpg"
-        alt="Picture of a bulldopg in a tutu" class="flex-1 object-contain max-w-3xl mx-auto ">
+        alt="Picture of a bulldopg in a tutu" class="flex-1 object-contain max-w-full mx-auto lg:max-w-3xl ">
     </div>
 {% endblock %}
