--- a/hot_dogz/templates/profile.html
+++ b/hot_dogz/templates/profile.html
@@ -1,60 +1,66 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <!-- USER PROFILE -->
-    <div class="container mx-auto">
-        <!-- DETAILS (avatar, username, edit buttons if current user) -->
-        <div class="flex flex-col items-center gap-4 justify-evenly">
-            <div>
-                <img src="{{user.img_url}}" alt="user avatar" class="w-40 p-2 border-2 border-gray-300 border-dashed rounded-full shadow-xl">
-                <div class="w-full -mt-4">
-                    {% if user.username == current_user.username %}
-                    <a href="{{url_for('users.select_avatar')}}" aria-label="avatar select">
-                        <i class="px-2 py-1 -mt-10 text-xl bg-white border-2 border-dashed rounded-full border-primary-500 fas fa-camera text-primary-500"></i>
-                    </a>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="flex flex-col py-6 gap-4 {{'justify-between' if user.username == current_user.username else 'justify-center'}}">
-                <h1 class="text-4xl text-center uppercase sm:text-6xl font-title text-secondary-500 ">{{user.username}}</h1>
-                 {% if user.username == current_user.username %}
-                 <div class="flex justify-between gap-10">
-                    <a href=" {{url_for('users.edit_profile')}} " class="text-lg font-semibold text-gray-600 hover:underline focus:italic">Edit Account</a>
-                    <a href="{{url_for('users.delete_account')}}" class="text-lg font-semibold text-gray-600 hover:underline focus:italic">Delete Account</a>
-                </div>
-                 {% endif %}
-            </div>
-        </div>
-        <!-- USER UPLOADS -->
-        <div class="flex flex-col items-center">
-            <h1 class="py-2 text-4xl text-center sm:text-5xl font-title text-secondary-500"> My Dogs </h1>
-            <div class="flex flex-col gap-6 p-6 lg:grid lg:grid-flow-col">
-                {% if user_dogs|length %}
-                    {% for dog in user_dogs %}
-                        {% include '_dog_card.html' %}
-                    {% endfor %}
-                {% else %}
-                    <p class="text-xl font-bold text-center text-gray-500">No dogs uploaded yet!</p>
+<!-- USER PROFILE -->
+<div class="container mx-auto">
+    <!-- DETAILS (avatar, username, edit buttons if current user) -->
+    <div class="flex flex-col items-center gap-4 justify-evenly">
+        <div>
+            <img src="{{user.img_url}}" alt="user avatar"
+                class="w-40 p-2 border-2 border-gray-300 border-dashed rounded-full shadow-xl">
+            <div class="w-full -mt-4">
+                {% if user.username == current_user.username %}
+                <a href="{{url_for('users.select_avatar')}}" aria-label="avatar select">
+                    <i
+                        class="px-2 py-1 -mt-10 text-xl bg-white border-2 border-dashed rounded-full border-primary-500 fas fa-camera text-primary-500"></i>
+                </a>
                 {% endif %}
             </div>
+        </div>
+        <div
+            class="flex flex-col py-6 gap-4 {{'justify-between' if user.username == current_user.username else 'justify-center'}}">
+            <h1 class="text-4xl text-center uppercase sm:text-6xl font-title text-secondary-500 ">{{user.username}}</h1>
             {% if user.username == current_user.username %}
-                <a href=" {{url_for('dogs.upload_dog')}} " class="w-40 py-1 mx-auto text-base btn btn-primary ">Upload dog</a>
+            <div class="flex justify-between gap-10">
+                <a href=" {{url_for('users.edit_profile')}} "
+                    class="text-lg font-semibold text-gray-600 hover:underline focus:italic">Edit Account</a>
+                <a href="{{url_for('users.delete_account')}}"
+                    class="text-lg font-semibold text-gray-600 hover:underline focus:italic">Delete Account</a>
+            </div>
             {% endif %}
         </div>
-        <!-- USER FAVOURITES -->
-        <div>
-            <h1 class="py-6 text-4xl text-center sm:text-5xl font-title text-secondary-500"> My Favourites </h1>
-                {% if favourites|length %}
-                <div class="flex flex-wrap items-center py-6 gap-y-6 gap-x-2">
-                    {% for dog in favourites %}
-                        {% include '_dog_card.html' %}
-                    {% endfor %}
-                </div>
-                {% else %}
-                    <p class="py-6 text-xl font-bold text-center text-gray-500">No favourite dogs saved yet!</p>
-                {% endif %}
-            </div>
-        </div>
     </div>
+    <!-- USER UPLOADS -->
+    <div class="flex flex-col items-center">
+        <h1 class="py-2 text-4xl text-center sm:text-5xl font-title text-secondary-500"> My Dogs </h1>
+        <div class="flex flex-col gap-6 p-6 lg:grid lg:grid-flow-col">
+            {% if user_dogs|length %}
+            {% for dog in user_dogs %}
+            {% include '_dog_card.html' %}
+            {% endfor %}
+            {% else %}
+            <p class="text-xl font-bold text-center text-gray-500">No dogs uploaded yet!</p>
+            {% endif %}
+        </div>
+        {% if user.username == current_user.username %}
+        <a href=" {{url_for('dogs.upload_dog')}} " class="w-40 py-1 mx-auto text-base btn btn-primary ">Upload dog</a>
+        {% endif %}
+    </div>
+    <!-- USER FAVOURITES -->
+    <div>
+        <h1 class="py-6 text-4xl text-center sm:text-5xl font-title text-secondary-500"> My Favourites </h1>
+        {% if favourites|length %}
+        <div
+            class="flex flex-wrap items-center justify-center max-w-screen-xl py-6 mx-auto justify-items-center gap-y-6 gap-x-2 ">
+            {% for dog in favourites %}
+            {% include '_dog_card.html' %}
+            {% endfor %}
+        </div>
+        {% else %}
+        <p class="py-6 text-xl font-bold text-center text-gray-500">No favourite dogs saved yet!</p>
+        {% endif %}
+    </div>
+</div>
+</div>
 
 {% endblock content %}
