--- a/hot_dogz/templates/_dog_card.html
+++ b/hot_dogz/templates/_dog_card.html
@@ -3,7 +3,7 @@
 <div class="w-96 max-w-sm mx-auto transition-opacity duration-1000 bg-white border-4 dash-border  {{'opacity-0' if animate == 'on'}}">
     <div class="flex">
         <div class="grid flex-1 place-items-center">
-            <img src="{{dog.img_url_card}}" alt="A picture of my dog {{dog.name}}" class="object-cover w-full h-32 p-1 rounded-lg " loading="lazy">
+            <a href="{{url_for('dogs.dog_page', dog_id=dog.pk)}}" aria-label="{{dog.name}}'s profile page"><img src="{{dog.img_url_card}}" alt="A picture of my dog {{dog.name}}" class="object-cover w-full h-32 p-1 rounded-lg" loading="lazy"></a>
         </div>
         <div class="flex flex-col flex-1 px-1 text-gray-600 justify-evenly">
             <p>Name: <span class="font-semibold">{{dog.name}}</span></p>
