move favicon ico to static folder

--- a/hot_dogz/templates/base.html
+++ b/hot_dogz/templates/base.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Hot Dogz is a fun web app to find photos of cute dogs and share photos of your own!">
     <meta property="og:image" content="https://res.cloudinary.com/cjcon90/image/upload/v1616015377/hot_dogz/og_preview_image.png">
     <meta property="og:url" content="https://hot-dogz.herokuapp.com">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="https://kit.fontawesome.com/ea8e9f1dd8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lobster&display=swap" rel="stylesheet">
