add twitter meta tags

--- a/hot_dogz/templates/base.html
+++ b/hot_dogz/templates/base.html
@@ -11,6 +11,10 @@
     <meta property="og:description" content="Hot Dogz is a fun web app to find photos of cute dogs and share photos of your own!">
     <meta property="og:image" content="https://res.cloudinary.com/cjcon90/image/upload/v1616015377/hot_dogz/og_preview_image.png">
     <meta property="og:url" content="https://hot-dogz.herokuapp.com">
+    <meta name="twitter:title" content="Hot Dogz">
+    <meta name="twitter:description" content="The Internet's #1 dog photo sharing app">
+    <meta name="twitter:image" content="https://res.cloudinary.com/cjcon90/image/upload/v1616015377/hot_dogz/og_preview_image.png">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="https://kit.fontawesome.com/ea8e9f1dd8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
