add contact form for non-logged in users

--- a/hot_dogz/static/css/compiled.css
+++ b/hot_dogz/static/css/compiled.css
@@ -1104,6 +1104,10 @@ html {
   padding-bottom: 2.5rem;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .static {
   position: static;
 }
