--- a/hot_dogz/templates/login.html
+++ b/hot_dogz/templates/login.html
@@ -29,6 +29,10 @@
         </div>
         <div class="flex flex-col items-center gap-4 mt-10 text-xl font-bold text-center">
             <p class="text-gray-500 ">Forgot your password? <a href="{{url_for('users.reset_password_request')}}" class="text-primary-500 hover:underline hover:text-primary-600 ">Reset it now</a></p>
+            <div>
+                <p class="text-gray-500 ">Need something else?</p>
+                <a href="{{url_for('main.contact')}}" class="text-primary-500 hover:underline hover:text-primary-600 ">Contact us</a>
+            </div>
         </div>
     </div>
 
