--- a/hot_dogz/templates/register.html
+++ b/hot_dogz/templates/register.html
@@ -40,6 +40,10 @@
         <div class="flex flex-col items-center gap-4 mt-10 text-xl font-bold text-center">
             <p class="text-gray-500 ">Already a member?</p>
             <a href="{{url_for('users.login')}}" class="w-40 btn btn-primary">Log In</a>
+            <div>
+                <p class="text-gray-500 ">Need something else?</p>
+                <a href="{{url_for('main.contact')}}" class="text-primary-500 hover:underline hover:text-primary-600 ">Contact us</a>
+            </div>
         </div>
     </div>
 {% endblock %}
