--- a/hot_dogz/static/css/compiled.css
+++ b/hot_dogz/static/css/compiled.css
@@ -798,6 +798,10 @@ html {
   font-weight: 700;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .h-16 {
   height: 4rem;
 }
@@ -1299,6 +1303,10 @@ html {
 
 .invisible {
   visibility: hidden;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-28 {
