--- a/hot_dogz/templates/_comment_card.html
+++ b/hot_dogz/templates/_comment_card.html
@@ -1,11 +1,13 @@
 <!-- Comment component on main full-size dog image page  -->
 <div class="flex items-center px-2 mx-4 border-2 border-gray-300 border-dashed rounded-lg">
-    <img src="{{comment.author.img_url}}" alt="{{comment.author.username}}'s avatar" class="w-auto h-20 ">
+    <a href="{{url_for('users.profile', username=comment.author.username)}}" aria-label="User profile for {{comment.author.username}}">
+        <img src="{{comment.author.img_url}}" alt="{{comment.author.username}}'s avatar" class="w-auto h-20 ">
+    </a>
     <div class="flex flex-col justify-center flex-1 gap-1 p-1">
         <p class="text">{{comment.content}}</p>
         <hr class="border border-dashed">
         <div class="flex items-baseline justify-between text-xs text-center">
-            {% if comment.author == current_user %}
+            {% if comment.author == current_user or current_user.username == 'admin' %}
                 <div class="flex gap-2">
                     <a href="{{url_for('users.edit_comment', comment_id=comment.pk)}}" class="btn-small btn-secondary">Edit</a>
                     <a href="{{url_for('users.delete_comment', comment_id=comment.pk)}}" class="btn-small btn-primary">Delete</a>
