make footer links open in a new tab

--- a/hot_dogz/templates/base.html
+++ b/hot_dogz/templates/base.html
@@ -115,12 +115,12 @@
       </div>
     {% endif %}
     <footer class="flex flex-col h-20 py-2 pb-4 {{'mb-16' if title and current_user.is_authenticated}} text-center text-gray-300 bg-gray-700 md:m-0 text-sm sm:text-base">
-      <p>Created by <a href="https://www.cjcon90.dev" class="font-semibold hover:text-white focus:underline">Ciaran Concannon</a></p>
-      <p>Pug photos coutesy of <a href="https://burst.shopify.com/@matthew_henry" class="font-semibold hover:text-white focus:underline">Matthew Henry</a></p>
+      <p>Created by <a href="https://www.cjcon90.dev" class="font-semibold hover:text-white focus:underline" target="_blank">Ciaran Concannon</a></p>
+      <p>Pug photos coutesy of <a href="https://burst.shopify.com/@matthew_henry" class="font-semibold hover:text-white focus:underline" target="_blank">Matthew Henry</a></p>
       <p><a href="https://www.flaticon.com/free-icon/pawprint_1076928?term=dog%20paw&page=1&position=2&page=1&position=2&related_id=1076928&origin=search"
-        class="font-semibold hover:text-white focus:underline">Hot Dogz Logo</a> and 
+        class="font-semibold hover:text-white focus:underline" target="_blank">Hot Dogz Logo</a> and 
         <a href="https://www.freepik.com/free-vector/different-dog-faces-collection_905468.htm"
-        class="font-semibold hover:text-white focus:underline">user avatars</a> courtesy of Freepik</p>
+        class="font-semibold hover:text-white focus:underline" target="_blank">user avatars</a> courtesy of Freepik</p>
     </footer>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </body>
