--- a/hot_dogz/templates/index.html
+++ b/hot_dogz/templates/index.html
@@ -1,17 +1,16 @@
 {% extends 'base.html' %}
-
 {% block content %}
 <!-- LANDING PAGE (for anonymous users)-->
 <div class="flex flex-col items-center mx-auto overflow-hidden min-h-screen-less-nav landscape:flex-row max-w-screen-2xl">
-        <div class="flex flex-col justify-start w-screen text-center landscape:h-2/5 landscape:justify-evenly">
-                <h1 class="mt-4 tracking-wider text-primary-500 text-8xl font-welcome md:text-9xl landscape:mt-0"><em>Hot
+        <div class="flex flex-col justify-start w-screen text-center landscape:h-2/5 landscape:justify-evenly ">
+                <h1 class="mt-4 tracking-wider text-primary-500 text-7xl font-welcome md:text-9xl landscape:mt-0"><em>Hot
                                 Dogz</em></h1>
-                <h2 class="mt-4 text-2xl text-gray-600 lg:text-2xl">The Internet's #1 Dog Rating Gallery</h2>
+                <h2 class="mt-4 text-lg text-gray-600 md:text-xl lg:text-2xl">The Internet's #1 Dog Rating Gallery</h2>
                 <a href="{{url_for('main.gallery', view='hot', animate='on')}}" class="z-10 w-auto px-6 mx-auto mt-10 btn btn-switch">SEE THE DOGS</a>
         </div>
         <img src="https://res.cloudinary.com/cjcon90/image/upload/w_700,c_scale,q_auto,f_jpg/v1615248344/hot_dogz/wallpapers/dog4_crop.jpg"
                 alt="Photo of a fashionable dog holding a cell phone"
-                class="z-0 self-end flex-1 object-cover mx-auto lg:max-w-lg xl:max-w-2xl">
+                class="z-0 self-end flex-1 object-cover">
 </div>
 
 
