--- a/hot_dogz/templates/base.html
+++ b/hot_dogz/templates/base.html
@@ -19,7 +19,7 @@
     <script src="https://kit.fontawesome.com/ea8e9f1dd8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/compiled.css') }}" type="text/css">
     {% if title %}
     <title>{{ title }} - Hot Dogz</title>
     {% else %}
