--- a/hot_dogz/templates/dog/dog_page.html
+++ b/hot_dogz/templates/dog/dog_page.html
@@ -27,7 +27,7 @@
                 <p class="text-sm text-gray-600 uppercase">About:</p>
                 <p class="text-base font-semibold text-secondary-500 ">{{dog.about if dog.about else "No info yet!"}}</p>
             </div>
-            {% if current_user == dog.owner %}
+            {% if dog.owner == current_user or current_user.username == 'admin' %}
             <div class="flex justify-center gap-8">
                 <div><a href=" {{url_for('dogs.edit_dog', dog_id=dog.pk)}} " class="btn btn-primary btn-small">Edit Dog</a></div>
                 <div><a href=" {{url_for('dogs.delete_dog', dog_id=dog.pk)}}  " class="btn btn-primary btn-small">Delete Dog</a></div>
@@ -42,7 +42,7 @@
         <div class="flex flex-col gap-6 py-4">
             {% if comments|length %}
                 {% for comment in comments %}
-                    {% include '_comment_card.html' %}
+                    {% include 'user/_comment_card.html' %}
                 {% endfor %}
             {% else %}
                 <p class="text-lg font-bold text-center text-gray-500">No comments yet!</p>
