--- a/hot_dogz/templates/main/gallery.html
+++ b/hot_dogz/templates/main/gallery.html
@@ -19,14 +19,14 @@
             </p>
             <div class="flex flex-col gap-6 p-4 lg:grid lg:grid-cols-2 lg:w-max lg:mx-auto {{'gallery-animate' if animate == 'on'}}">
                 {% for dog in dogs.items %}
-                    {% include '_dog_card.html' %}
+                    {% include 'dog/_dog_card.html' %}
                 {% endfor %}
             </div>
             <div class="flex flex-col gap-4">
                 {# Macro for creating navigation links #}
                     <!-- source: https://github.com/MongoEngine/flask-mongoengine/blob/master/flask_mongoengine/pagination.py -->
                     {% macro render_navigation(pagination, endpoint) %}
-                    {% include '_pagination.html' %}
+                    {% include 'main/_pagination.html' %}
                     {% endmacro %}
                     {{ render_navigation(dogs, 'main.gallery') }}
                     <div class="grid w-full max-w-sm py-6 mx-auto dash-border place-items-center {{'fade-in-slow' if animate == 'on'}}">
